--- a/.github/workflows/playwright-test.yaml
+++ b/.github/workflows/playwright-test.yaml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Get Allure history
         uses: actions/checkout@v2
+        if: always()
         continue-on-error: true
         with:
           ref: gh-pages
@@ -26,6 +27,7 @@ jobs:
 
       - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
+        if: always()
         id: allure-report
         with:
           allure_results: allure-results
@@ -34,8 +36,19 @@ jobs:
           allure_history: allure-history
 
       - name: Deploy report to Github Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
+
+      - name: Post the link to the report
+        if: always()
+        uses: Sibz/github-status-action@v1
+        with: 
+            authToken: ${{secrets.TOKEN}}
+            context: 'Test report'
+            state: 'success'
+            sha: ${{ github.event.pull_request.head.sha }}
+            target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
